...
    <string name="scan_qr_code">Scan to Activate</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="home_help">Help</string>

    <!--Side Menu-->
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="account_vehicles">Vehicles</string>
    <string name="invite">Invite</string>
    <string name="invite_link_copied">Link copied</string>
...
    <string name="profile_delete_account_description">Your account will be immediately deactivated. After 30 days it will be permanently deleted, and any unused credits, promotions, or rewards will be removed.</string>
    <string name="profile_guest">Guest</string>
    <string name="profile_see">See Profile</string>
    <string name="profile_select_country_please">Please select country</string>

...
    <string name="login_need_help">I need help</string>
    <string name="login_enter_code">Enter the 4-digit code we sent you</string>
    <string name="login_option_title">Sign in</string>
    <string name="login_option_google">Sign in with Google</string>
    <string name="login_option_email">Sign in with email</string>
    <string name="login_option_guest">Continue as Guest</string>
    <string name="login_option_other">Explore other Sign-in options</string>
    <string name="login_email">Email</string>
    <string name="login_email_title">Sign in or create account</string>
    <string name="login_email_enter">Enter your email</string>
    <string name="login_email_enter_msg">Please enter your email address. We\'ll send you a verification code to keep your account secure.</string>
    <string name="login_email_error_msg">Email address incorrect</string>
    <string name="login_email_password">Password</string>
    <string name="login_email_password_enter">Enter a password</string>
    <string name="login_email_password_new">New Password</string>
    <string name="login_email_password_confirm">Confirm Password</string>
...
    <!-- ACTIONS -->
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="update_now">Update Now</string>
    <string name="remove">Remove</string>
...
    <string name="copy_code">Copy Referral Link</string>
    <string name="agree_and_continue">Agree &amp; Continue</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="continue_">Continue</string>

    <!--Payment-->
...
    <string name="balance_show">Show Balance</string>
    <string name="balance_available">Available Balance</string>
    <string name="balance_add">Add Balance</string>
    <string name="balance_popular">Popular</string>
    <string name="balance_non_refundable">Balance with discount is non-refundable, please tab continue to agree</string>
...
    <string name="station_plugs">Plugs</string>
    <string name="station_plug_type">Plug Type</string>
    <string name="station_plug_add">Add Plug</string>
    <string name="station_details_plug">Plug: %d</string>
    <string name="station_details_parking">Parking</string>
...
    <string name="station_details_title">Title</string>
    <string name="station_details_descriptions">Descriptions</string>
    <string name="station_save_next">Save and Next</string>

    <!-- Vehicles -->
    <string name="vehicle_title">My Vehicles</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_model_search">Search Model</string>
    <string name="vehicle_version">Version</string>
    <string name="vehicle_add">Add Vehicle</string>
    <string name="vehicle_delete">Delete vehicle?</string>
    <string name="vehicle_delete_message">Are you sure you want to delete this vehicle?</string>
    <string name="vehicle_manufacturer">Manufacturer</string>
    <string name="vehicle_manufacturer_search">Search Manufacturer</string>
    <string name="vehicle_details">Details</string>
    <string name="vehicle_details_color">Color</string>
...
    <string name="order_selected_product">Product</string>
    <string name="order_discount">Discount</string>
    <string name="order_vatId">VAT ID</string>
    <string name="order_subtotal">Subtotal : </string>
    <string name="order_total">Total</string>
...
