...
        VehicleModel(2, "ALFA", "Alfa Romeo", ""),
        VehicleModel(3, "AMC", "AMC", ""),
        VehicleModel(4, "ASTON", "Aston Martin", ""),
        VehicleModel(5, "AUDI", "Audi", ""),
        VehicleModel(6, "AVANTI", "Avanti", ""),
        VehicleModel(7, "BENTL", "Bentley", ""),
        VehicleModel(8, "BMW", "BMW", ""),
        VehicleModel(9, "BUICK", "Buick", ""),
        VehicleModel(10, "CAD", "Cadillac", ""),
        VehicleModel(11, "CHEV", "Chevrolet", ""),
        VehicleModel(12, "CHRY", "Chrysler", ""),
        VehicleModel(13, "DAEW", "Daewoo", ""),
        VehicleModel(14, "DAIHAT", "Daihatsu", ""),
...
